--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
        <meta charset="UTF-8">
        <link rel="stylesheet" href="css/cssPart.css">
-       <link rel="icon" href="assets/favicon.ico">
+       <link rel="icon" href="assets/favicon2.ico">
        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -145,9 +145,9 @@
               
               
               <div class="bottom-container">
-                <a id="last" class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-                <a class="footer-link" href="https://twitter.com/">Twitter</a>
-                <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+                <a id="last" class="footer-link" href="https://www.linkedin.com/in/christian-andrés-lüer-sepúlveda-508692192">LinkedIn</a>
+                <a class="footer-link" href="https://www.instagram.com/christian_luer/">Instagram</a>
+                <a class="footer-link" href="https://www.facebook.com/cristian.luersepulveda/">Facebook</a>
                 <p>© Christian Lüer.</p>
               </div>              
     </body>
